membuat deklarasi ibu dan anak

--- a/MainIA/MainIA.vcxproj
+++ b/MainIA/MainIA.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{2f5be001-6238-4e9c-9f45-811348742d23}</ProjectGuid>
-    <RootNamespace>pewarisan126</RootNamespace>
+    <ProjectGuid>{7ef2ab4d-dd67-4433-968f-5388234084c7}</ProjectGuid>
+    <RootNamespace>MainIA</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Paradigmaoop_126</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="pewarisan_126.cpp" />
+    <ClCompile Include="MainIA.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
